# cl_server

./: .gitignore  .gitmodules  README.md  install.sh  pyproject.toml  pyrightconfig.json  refresh_dart_projects.sh  run_server_tests.sh  version_tag.sh
.zed/: settings.json
configs/: dev.json  dev.toml  dev_single_worker.json  rpi.json
docs/: ARCHITECTURE.md  ISSUES.md  PROJECT_STRUCTURE.md  Structure.mmd  cli_python_IMPLEMENTATION_PLAN.md  cli_python_TEST_UPDATE_GUIDE.md  m_insight_architecture.md  m_insight_refactor.md  m_insight_workflow.mmd  media_repo_migration.md  naming_convention.md  soft-wiggling-wirth.md  store_db_service_plan.md
docs/templates/: INTERNALS.md.template  README.md.template  tests-QUICK.md.template  tests-README.md.template
services/: pyproject.toml
src/cl_server/: test_run_repl.py
src/cl_server/profile_utils/: profile_perf.py
src/cl_server/server_launcher/: __init__.py  broadcaster.py  cli.py  config.py  migrate.py  process.py  services.py  verify.py
