[project]
name = "cl-server"
version = "0.1.0"
description = "Workspace for CL Server"
requires-python = ">=3.12,<3.13" 

dependencies = [
    "basedpyright>=1.37.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "requests>=2.31.0",
    "ruff>=0.14.10",
    "pillow>=10.0.0",
    "cl-client",
    "rich>=13.7.0",
    "questionary>=2.0.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cl_server"]

[project.scripts]
auth-server = "auth.main:main"
compute-migrate = "compute.migrate:main"
compute-server = "compute.compute_server:main"
compute-worker = "compute.compute_worker:main"
store = "store.main:main"
cl-client = "cl_client_cli.main:cli"
cl-client-sdk = "cl_client.cli:main"
server-launcher = "cl_server.server_launcher:main"
profile-perf = "cl_server.profile_utils.profile_perf:main"
test-run = "cl_server.test_run_repl:main"
test_run = "cl_server.test_run_repl:main"

[tool.uv.workspace]
members = [
    "services/auth",
    "services/compute",
    "services/store",
  
    "services/packages/cl_ml_tools",
    "apps/cli_python",
    "sdks/pysdk",
]

[tool.uv.sources]
cl-ml-tools = { workspace = true }
cl-client = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "intelligence: marks tests related to intelligence features",
    "admin_only: marks tests as requiring admin permissions",
]
asyncio_mode = "strict"
